# Isaac-Sim_Simulation

./: AutoWheelLoader_Simulation.code-workspace  CMakeLists.txt  README.md  articulation_controller_validation.txt  joint_drive_check.txt  node_search_results.txt  package.xml  readme.md  robot_structure_analysis.txt  tracking_performance.csv
include/wheel_loader_controller/: curve_path_lateral_pid_tracker.hpp  simple_vehicle_controller.hpp
launch/: curve_path_lateral_pid_tracker.launch.py  time_varying_vehicle_fullstate.launch.py
scripts/: acation_graph_setup.py  add_joint_drives.py  add_path.py  debug_articulated_geometry_fixed.py  joint_drive_check.py  plot_curve_pid_log.py  scene_check.py  wheel_loader_state_ag_runtime.py  wheel_loader_teleop_test.py  wheel_loader_teleop_v1.py
src/: curve_path_lateral_pid_tracker.cpp  simple_vehicle_controller_fullstate.cpp
world/: CJLAZ_v1_20250607.usda  CJLAZ_v2_20250909.usda
world/usd/WheelLoaderRealURDF_full/SubUSDs/materials/: Tinted_Glass_R75.mdl
