<?xml version="1.0"?>
<package format="3">
  <name>wheel_loader_controller</name>
  <version>0.0.0</version>
  <description>Wheel loader controller package</description>
  <maintainer email="1152040835@qq.com">auto</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>